[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datatrusted"
version = "0.1.0"
description = "A trust layer for tabular data — audit datasets before analysis or ML training."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Ahmad Suweiti" },
]
keywords = [
    "data quality",
    "data validation",
    "pandas",
    "machine learning",
    "data auditing",
    "data science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
]

[project.urls]
Homepage = "https://github.com/AhmadSuweiti/datatrusted"
Repository = "https://github.com/AhmadSuweiti/datatrusted"
Issues = "https://github.com/AhmadSuweiti/datatrusted/issues"

[tool.hatch.build.targets.wheel]
packages = ["datatrust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
